Updated src for imgs on file Images

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </head>
     <body>
         <div class="top-container">
-            <img class="cloud1" src="images/cloud.png" alt="cloud">
+            <img class="cloud1" src="Images/cloud.png" alt="cloud">
             <h1>Mario Pinos García</h1>
             <h2>A developer in the pursuit of...</h2>
-            <img class="cloud2" src="images/cloud.png" alt="cloud2">
+            <img class="cloud2" src="Images/cloud.png" alt="cloud2">
             <img src="images/mountain.png" alt="mountain">
-            <img class="tulip" src="images/Tulip.png" alt="tulip">
+            <img class="tulip" src="Images/Tulip.png" alt="tulip">
         </div>
         <div class="middle-container">
             <div class="profile">
