Updated Images src letter

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Mario Pinos García</h1>
             <h2>A developer in the pursuit of...</h2>
             <img class="cloud2" src="Images/cloud.png" alt="cloud2">
-            <img src="images/mountain.png" alt="mountain">
+            <img src="Images/mountain.png" alt="mountain">
             <img class="tulip" src="Images/Tulip.png" alt="tulip">
         </div>
         <div class="middle-container">
